--- a/TicTacToe/tictactoe.css
+++ b/TicTacToe/tictactoe.css
@@ -90,3 +90,20 @@ body {
 	padding:30px;
 	border:thick solid #120136;
 }
+
+#controls {
+	position:fixed;
+	top:0px;
+	left: 0px;
+	width:100%;
+	height:100%;
+}
+
+#newbutton {
+	position:absolute;
+	top:15px;
+	right:15px;
+	height:60px;
+	width:150px;
+	background-color:#40bad5;
+}
