--- a/A+S_Adventure/style.css
+++ b/A+S_Adventure/style.css
@@ -19,6 +19,23 @@ body {
 	background-color: #00EE00;
 }
 
+.message {
+	display:none;
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.8);
+	color:white;
+	font-family:Verdana, sans-serif;
+	font-size:8em;
+	vertical-align:top;
+	text-align:center;
+	line-height:100vh;
+}
+
+
 .rider {
 	background-image:url("images/rider.png");
 }
@@ -66,20 +83,20 @@ body {
 }
 
 
-.horseuprider {
-	background-image:url("images/horseuprider.png");
+.horserideup {
+	background-image:url("images/horserideup.png");
 }
 
-.horserightrider {
-	background-image:url("images/horserightrider.png");
+.horserideright {
+	background-image:url("images/horserideright.png");
 }
 
-.horseleftrider {
-	background-image:url("images/horseleftrider.png");
+.horserideleft {
+	background-image:url("images/horserideleft.png");
 }
 
-.horsedownrider {
-	background-image:url("images/horsedownrider.png");
+.horseridedown {
+	background-image:url("images/horseridedown.png");
 }
 
 
