--- a/A+S_Adventure/style.css
+++ b/A+S_Adventure/style.css
@@ -87,7 +87,7 @@ body {
 	margin:17px;
 }
 
-#restartButton {
+#links { /*also restart button*/
 	font-family:Verdana, sans-serif;
 	
 	border: 2px solid #222222;
